--- a/index.html
+++ b/index.html
@@ -10,13 +10,12 @@
   <body>
     <section>
       <div class="page_container">
-        <div class="left">
+        <div class="left"> 
           <div class="sidebar">
             <img
               src="./assets/odin-lined.png"
               alt=""
-              style="object-fit: cover"
-            />
+              style="object-fit: cover"/>
             <h1 style="align-self: center">ODIN</h1>
           </div>
         </div>
@@ -42,7 +41,8 @@
                     id="firstname"
                     value="Thor"
                     required
-                  /><br />
+                  />
+                  <br/>
                 </div>
                 <div class="input">
                   <label for="lastname">LAST NAME</label><br />
@@ -80,7 +80,7 @@
             </button>
           </form>
           <p style="margin-left: 2rem">
-            Already have an account? <a href="#">Log In</a>
+            Already have an account? <a href="https://lms.terrahq.co">Log In</a>
           </p>
         </div>
       </div>
