--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="left"> 
           <div class="sidebar">
             <img
-              src="./assets/odin-lined.png"
+              src="Giddy_Frosh-02"
               alt=""
               style="object-fit: cover"/>
             <h1 style="align-self: center">ODIN</h1>
